--- a/iOSMobileTips/Base.lproj/Main.storyboard
+++ b/iOSMobileTips/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="PBE-0N-mHX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="PBE-0N-mHX">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -27,8 +28,7 @@
                                         <exclude reference="cd9-Xd-Wn0"/>
                                     </mask>
                                 </variation>
-                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="16" y="14" width="368" height="218"/>
+                                <variation key="heightClass=regular-widthClass=compact">
                                     <mask key="constraints">
                                         <include reference="cd9-Xd-Wn0"/>
                                     </mask>
@@ -39,18 +39,12 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
-                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="102" y="261" width="197" height="27"/>
-                                </variation>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to iOS Mobile Dev Tips!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HvA-rn-UNf">
                                 <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
-                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="72" y="332" width="257" height="21"/>
-                                </variation>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="6cP-gn-1hc">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
@@ -89,11 +83,8 @@
                                 <state key="normal" title="Button2">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
-                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="177" y="750" width="59" height="30"/>
-                                </variation>
                                 <connections>
-                                    <segue destination="YoN-er-ulQ" kind="show" id="Zzw-Ex-pGa"/>
+                                    <segue destination="YoN-er-ulQ" kind="show" identifier="collectionSegue" id="1uH-il-g7T"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Exx-Lr-4dm">
@@ -101,9 +92,6 @@
                                 <state key="normal" title="Button3">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
-                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="274" y="750" width="55" height="30"/>
-                                </variation>
                                 <connections>
                                     <segue destination="ZeB-Gl-DSM" kind="show" id="BPx-qZ-9UI"/>
                                 </connections>
@@ -146,21 +134,21 @@
                                 <exclude reference="Exx-Lr-4dm"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="03h-iQ-z9l"/>
-                                <exclude reference="QCg-pu-k8k"/>
-                                <exclude reference="fxD-CR-lIX"/>
-                                <exclude reference="4nI-6F-ZEs"/>
-                                <exclude reference="aCL-se-aMQ"/>
                                 <exclude reference="6fz-4e-FZp"/>
                                 <exclude reference="jGO-mG-ZJJ"/>
                                 <exclude reference="ypF-eA-q6V"/>
-                                <exclude reference="4FI-93-cVo"/>
-                                <exclude reference="HY5-A6-c45"/>
-                                <exclude reference="aJY-te-w5e"/>
+                                <exclude reference="4nI-6F-ZEs"/>
+                                <exclude reference="aCL-se-aMQ"/>
                                 <exclude reference="Aim-Wa-PEe"/>
                                 <exclude reference="GWY-Tj-ZAp"/>
                                 <exclude reference="Sdc-9M-Dpj"/>
                                 <exclude reference="f9p-Oc-Kt6"/>
+                                <exclude reference="HY5-A6-c45"/>
+                                <exclude reference="aJY-te-w5e"/>
+                                <exclude reference="4FI-93-cVo"/>
+                                <exclude reference="03h-iQ-z9l"/>
+                                <exclude reference="QCg-pu-k8k"/>
+                                <exclude reference="fxD-CR-lIX"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
@@ -174,21 +162,21 @@
                                 <include reference="Exx-Lr-4dm"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="03h-iQ-z9l"/>
-                                <include reference="QCg-pu-k8k"/>
-                                <include reference="fxD-CR-lIX"/>
-                                <include reference="4nI-6F-ZEs"/>
-                                <include reference="aCL-se-aMQ"/>
                                 <include reference="6fz-4e-FZp"/>
                                 <include reference="jGO-mG-ZJJ"/>
                                 <include reference="ypF-eA-q6V"/>
-                                <include reference="4FI-93-cVo"/>
-                                <include reference="HY5-A6-c45"/>
-                                <include reference="aJY-te-w5e"/>
+                                <include reference="4nI-6F-ZEs"/>
+                                <include reference="aCL-se-aMQ"/>
                                 <include reference="Aim-Wa-PEe"/>
                                 <include reference="GWY-Tj-ZAp"/>
                                 <include reference="Sdc-9M-Dpj"/>
                                 <include reference="f9p-Oc-Kt6"/>
+                                <include reference="HY5-A6-c45"/>
+                                <include reference="aJY-te-w5e"/>
+                                <include reference="4FI-93-cVo"/>
+                                <include reference="03h-iQ-z9l"/>
+                                <include reference="QCg-pu-k8k"/>
+                                <include reference="fxD-CR-lIX"/>
                             </mask>
                         </variation>
                     </view>
@@ -206,6 +194,7 @@
             <objects>
                 <tableViewController id="wSl-FD-4jJ" customClass="TipsTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="B7t-yX-ezt">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -231,6 +220,7 @@
             <objects>
                 <collectionViewController id="YoN-er-ulQ" customClass="TipsCollectionViewController" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="nhw-uK-1WK">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="msF-jO-F7B">
                             <size key="itemSize" width="50" height="50"/>
@@ -268,6 +258,7 @@
                         <viewControllerLayoutGuide type="bottom" id="CJz-2f-ic7"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="1IB-D0-Fhh">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -281,6 +272,7 @@
             <objects>
                 <tableViewController clearsSelectionOnViewWillAppear="NO" id="dmi-kl-Bw5" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="xS6-Nd-j84">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -343,14 +335,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SMU-hs-UE8">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SMU-hs-UE8">
                                 <rect key="frame" x="16" y="355" width="568" height="215"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Vs-Iv-UoX">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Vs-Iv-UoX">
                                 <rect key="frame" x="16" y="111" width="568" height="187"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -362,7 +354,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tI0-Iz-NxU">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tI0-Iz-NxU">
                                 <rect key="frame" x="92" y="20" width="399" height="69"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
